--- a/.env
+++ b/.env
@@ -10,9 +10,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=admin_default
-DB_USERNAME=admin_default
-DB_PASSWORD=dOPcLVt9fT
+DB_DATABASE=chicopee
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
