--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,9 @@
         "laravel/framework": "5.6.x",
         "laravel/passport": "^7.0",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "~5.0",
+        "laravelcollective/html": "^5.2",
         "laravelium/sitemap": "2.x",
+        "maatwebsite/excel": "^3.1",
         "rap2hpoutre/fast-excel": "^0.9.0",
         "spatie/laravel-sitemap": "^5.2",
         "unisharp/laravel-ckeditor": "^4.7"
