--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,5 +1,6 @@
 <IfModule mod_rewrite.c>
 RewriteEngine On
+
 RewriteCond %{HTTP_HOST} ^chicopee\.kiev\.ua
 RewriteRule ^(.*)$ https://chicopee.in.ua/$1 [R=301,L]
 RewriteCond %{HTTP_HOST} ^www.chicopee.in.ua$ [NC]
@@ -8,4 +9,6 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^((?s).*)$ index.php?_url=/$1 [QSA,L]
 RewriteCond %{THE_REQUEST} /(.*)index.php.*$
+RewriteRule ^index.php(.*)$ /$1 [R=301,L]
+
 </IfModule>
