--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,10 +1,20 @@
 <IfModule mod_rewrite.c>
 RewriteEngine On
 
+RewriteCond %{HTTPS} !=on
+RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1 [R=301,L]
+
+RewriteCond %{THE_REQUEST} ^[A-Z]{3,9}\ /index\.php\ HTTP/
+RewriteRule ^index\.php$ https://chicopee.in.ua/ [R=301,L]
+
 RewriteCond %{HTTP_HOST} ^chicopee\.kiev\.ua
 RewriteRule ^(.*)$ https://chicopee.in.ua/$1 [R=301,L]
+
+
 RewriteCond %{HTTP_HOST} ^www.chicopee.in.ua$ [NC]
 RewriteRule ^(.*)$ https://chicopee.in.ua/$1 [R=301,L]
+
+
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^((?s).*)$ index.php?_url=/$1 [QSA,L]
